--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "axios": "1.6.2",
+    "firebase": "10.11.1",
     "formik": "2.4.5",
     "jwt-decode": "4.0.0",
     "react": "^18.2.0",
@@ -32,6 +33,7 @@
     "react-router-dom": "6.20.1",
     "react-router-hash-link": "2.4.3",
     "react-scripts": "5.0.1",
+    "react-swipeable-views-utils": "0.14.0",
     "react-use": "17.4.2",
     "styled-components": "6.1.2",
     "web-vitals": "2.1.4",
@@ -60,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "3.4.3"
   }
 }
