--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DB=mongodb+srv://kanjishnu:anjishnu7244@cluster.jepxtym.mongodb.net/social?retryWrites=true&w=majority
+DB=mongodb+srv://anjishnu:1234@cluster0.8dhmxjg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWTPRIVATEKEY=anuragMishra
 SALT=10
